begin project commentary

--- a/blockchain_labs_rockdex.ipynb
+++ b/blockchain_labs_rockdex.ipynb
@@ -10,8 +10,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "Bitcoin (BTC) is proposed to provided a modern era store of value and be a potential successor to Gold (GLD) in this respect (Ammous, 2018). Ammous (2018) illustrates that one of the key determinate factors of both BTC and GLD in confering this property is that they both demonstrate a high stock-to-flow ratio.\n",
+    "\n",
+    "Stock-to-flow refers to the property by which the current global stock or holding of an asset compares to the potential incomming flow of that asset. For example, the global stock of GLD compared to the potential new production of GLD is very high - i.e. its a rare metal on Earth and the effort of extraction of new GLD only accounts for some 2% of the stock. This is compared to the potential stock-to-flow of fiat currency whereby government issued paper (no longer backed by anything like a gold standard) can be printed / minted readily (with little effort) thus large quantities of new flow can devalue currently held stock, leading to inflationary periods and the consequent socio-economic results. The economic model of BTC is purported to resemble that of GLD as BTC miners are effectively expending a larger amount of resource and effort in minting new Bitcions. In addition the total global supply of BTC is capped to 22 million; this should result in a deflationary currency.\n",
+    "\n",
+    "In this study this notebook will:\n",
+    "\n",
+    "1. Investigate the potential correlation between BTC and GLD returns in timeseries, assuming a positive correlation indicates some representation whereby BTC is also considered a store of value.\n",
+    "2. Machine learning will be applied to determine if the trades into BTC or GLD can be recommended (it is suspected that the recent activities driving the price of BTC higher could result in an extremely simple, hold only strategy)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +57,10 @@
     }
    ],
    "source": [
-    "import os\n",
+    "# import libraries\n",
     "\n",
-    "#import cupy as cp\n",
+    "import os\n",
     "import pandas as pd\n",
-    "#import cudf\n",
-    "#import dask_cudf\n",
     "import numpy as np\n",
     "import time\n",
     "\n",
@@ -56,32 +71,35 @@
     "\n",
     "from pylab import mpl, plt\n",
     "plt.style.use('seaborn')\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "# libraries for analysis with GPU\n",
+    "\n",
+    "#import cupy as cp\n",
+    "#import cudf\n",
+    "#import dask_cudf"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 205,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pandas Time = 5.030632019042969e-05\n"
-     ]
-    }
-   ],
    "source": [
-    "df_BTC_USD_daily = pd.read_csv('crypto_data/Binance_BTCUSDT_d.csv', skiprows=1)\n",
-    "s = time.time()\n",
-    "e = time.time()    \n",
-    "print(\"Pandas Time = {}\".format(e-s))"
+    "The project does not require a full Extract Transform Load (ETL) pipeline, we do however need to extract and potentially clean the data after a period of discovery. The extraction and initial analysis of daily BTC (from the exchange Binance (2021) follows)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_BTC_USD_daily = pd.read_csv('crypto_data/Binance_BTCUSDT_d.csv', skiprows=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +221,7 @@
        "4  35828.61  80157.727384  2.843103e+09   1860642.0  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +381,7 @@
        "max    402201.673764  8.426880e+09  4.431451e+06  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -409,12 +427,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears that there are some missing trade count values though other values seem ok"
+    "It appears that there are some missing trade count values though other values seem ok."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +451,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,8 +461,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that there are null values for trade count. Upon inspection it seems that the missing values for trade count occur near the start of the data, assuming that Binance where not publishing these values during this time period.\n",
+    "TODO: ensure that the tradecounts are only for early data\n",
+    "TODO: can fill with the average, is it useful?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -659,16 +686,20 @@
        "[124 rows x 10 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# it appears that there are null values for trade count. Lets see where they are.\n",
-    "# TODO: ensure that the tradecounts are only for early data\n",
-    "# TODO: can fill with the average?\n",
     "df_BTC_USD_daily[df_BTC_USD_daily['tradecount'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now see that the data is daily Open, Low, High, Close (OLHC) with associated Volumes and Tradecounts. We can further visualise and analyse this data if we treat it like true timeseries data in Pandas. We can also note that first column (index_col=0), whilst representing the timeseries is a unix epoch time, we therefore reimport the data using "
    ]
   },
   {
@@ -677,7 +708,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new we know the data positions for timeseries lets re ingest it\n",
     "df_BTC_USD_daily = pd.read_csv('crypto_data/Binance_BTCUSDT_d.csv', skiprows=1, index_col=1, parse_dates=True)"
    ]
   },
@@ -14705,7 +14735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -14714,7 +14744,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -14737,6 +14767,15 @@
     "df_BTC_close_daily['SMA_slow'] = df_BTC_close_daily['close'].rolling(window=252).mean()\n",
     "df_BTC_close_daily['positions'] = np.where(df_BTC_close_daily['SMA_fast'] > df_BTC_close_daily['SMA_slow'],1,-1)\n",
     "df_BTC_close_daily[['close','SMA_fast','SMA_slow','positions']].plot(figsize=(15,7), secondary_y='positions', grid=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rolling correlation between BTC and ETH, then ADA then TRON."
    ]
   },
   {
