--- a/blockchain_labs_rockdex.ipynb
+++ b/blockchain_labs_rockdex.ipynb
@@ -93,6 +93,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Part 1. Data Exploration, Analysis and Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The project does not require a full Extract Transform Load (ETL) pipeline, we do however need to extract and potentially clean the data after a period of discovery. The extraction and initial analysis of daily BTC (from the exchange Binance (2021) follows)."
    ]
   },
@@ -481,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 632,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
